[package]
name = "musath"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.43"
clap = { version = "4.5.58", features = ["derive"] }
hound = "3.5.1"
lazy_static = "1.5.0"
pest = "2.8.6"
pest_derive = { version = "2.8.6", features = ["grammar-extras"] }
rayon = "1.11.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
